@@ -53,13 +53,13 @@ endif
 SUBDIRS += \
 	@WITH_DB_SUBDIR@ \
 	@WITH_ZLIB_SUBDIR@ \
-	@WITH_FILE_SUBDIR@ \
 	@WITH_PCRE_SUBDIR@ \
+	@WITH_LUA_SUBDIR@ \
+	@WITH_FILE_SUBDIR@ \
 	@WITH_SYCK_SUBDIR@ \
 	@WITH_XAR_SUBDIR@ \
 	@WITH_XZ_SUBDIR@ \
 	misc \
-	@WITH_LUA_SUBDIR@ \
 	rpmio \
 	rpmdb \
 	lib \
@@ -86,6 +86,7 @@ AM_CPPFLAGS = \
 	@WITH_ZLIB_CPPFLAGS@ \
 	@WITH_LUA_CPPFLAGS@ \
 	@WITH_FILE_CPPFLAGS@ \
+	@WITH_PCRE_CPPFLAGS@ \
 	@WITH_XAR_CPPFLAGS@ \
 	@WITH_XZ_CPPFLAGS@
 
