@@ -6,6 +6,71 @@ LIBRPMMISC_0
     db_env_set_func_fsync_rpmdb;
     db_strerror_rpmdb;
     db_create_rpmdb;
+    lua_call;
+    lua_close;
+    lua_concat;
+    lua_createtable;
+    lua_getfield;
+    lua_gettop;
+    lua_isnumber;
+    lua_isstring;
+    luaL_argerror;
+    luaL_checklstring;
+    luaL_error;
+    luaL_loadbuffer;
+    luaL_loadfile;
+    luaL_newstate;
+    lua_newthread;
+    luaL_openlib;
+    luaL_ref;
+    luaL_unref;
+    lua_newuserdata;
+    lua_next;
+    lua_objlen;
+    luaopen_base;
+    luaopen_crypto;
+    luaopen_debug;
+    luaopen_io;
+    luaopen_local;
+    luaopen_math;
+    luaopen_os;
+    luaopen_lxp;
+    luaopen_package;
+    luaopen_posix;
+    luaopen_rex_pcre;
+    luaopen_rex_posix;
+    luaopen_socket_core;
+    luaopen_string;
+    luaopen_table;
+    luaopen_uuid;
+    luaopen_wrs;
+    lua_pcall;
+    lua_pushboolean;
+    lua_pushcclosure;
+    lua_pushfstring;
+    lua_pushlightuserdata;
+    lua_pushlstring;
+    lua_pushnil;
+    lua_pushnumber;
+    lua_pushstring;
+    lua_pushvalue;
+    lua_rawget;
+    lua_rawgeti;
+    lua_rawset;
+    lua_rawseti;
+    lua_remove;
+    lua_settable;
+    lua_settop;
+    lua_toboolean;
+    lua_tolstring;
+    lua_tonumber;
+    lua_touserdata;
+    lua_type;
+    lua_xmove;
+    luaL_addlstring;
+    luaL_buffinit;
+    luaL_pushresult;
+    luaL_typerror;
     lzma_alone_encoder;
     lzma_auto_decoder;
     lzma_code;
